# event-trace

./: CMakeLists.txt  README.md
doc/: TODO.md
doc/concepts/: __API__.cpp  arg_name_value_handling.cpp  array_fill.cpp  global_api.cpp  macros_replaced.cpp
include/ibis/event_trace/: category.hpp  event_trace.hpp  scoped_event.hpp  trace_event.hpp  trace_id.hpp  trace_log.hpp
include/ibis/event_trace/detail/: clock.hpp  json_formatter.hpp  pch_default.hpp  pch_ibis.hpp  platform.hpp  platform_linux.hpp  platform_windows.hpp  trace_value.hpp
src/: category.cpp  event_trace.cpp  trace_event.cpp  trace_log.cpp
test/: CMakeLists.txt
test/include/testsuite/: mock_clock.hpp  namespace_alias.hpp  type_traits.hpp
test/src/: mock_dummy.cpp  mock_pthread.cpp  mock_unistd.cpp  test_event_trace.cpp
test/src/test/: basic_test.cpp  category_test.cpp  clock_test.cpp  simple_test.cpp  trace_log_test.cpp  trace_value_test.cpp
